--- a/TODO.txt
+++ b/TODO.txt
@@ -1,153 +1,4 @@
 
-
-                          /*
-                          '  <button data-dojo-type="dijit/form/DropDownButton" data-dojo-props="iconClass:\'dijitEditorIcon dijitEditorIconCut\',labelll:\'AND\'">\n'+
-                          '     <span>Edit<b>!</b></span>\n'+
-                          '       <span id="editMenu" data-dojo-type="dijit/Menu" >\n'+
-                          '         <span id="cut" data-dojo-type="dijit/MenuItem" data-dojo-props="iconClass:\'dijitEditorIcon dijitEditorIconCut\'">Cut</span>\n'+
-                          '         <span id="paste" data-dojo-type="dijit/MenuItem" data-dojo-attach-point="otherButton" data-dojo-props="iconClass:\'dijitEditorIcon dijitEditorIconPaste\'">Paste</span>\n'+
-                          '       </span>\n'+
-                          '     </span>\n'+
-                          '  </button>\n'+
-                          */
-
-
-
-FROM:
-=====
-Widget  with parameters:
-messageId (obj)
-contactId (obj)
-=>
-if contactId:
-  * contactId 
-if !contactId:
-  * Select...
-* Link email to another existing contact (contact picker)
-* Link email to a new contact (create contact, add email address, take person there)
-* Another contact with matching email address 1, != contactId
-* Another contact with matching email address 2, != contactId
-* Another contact with matching email address 3, != contactId
-
-When selection, save to messageId on one-field table with fromContactId.
-Check that change propagages properly to other tabs
-
-TO:
-===
-Widget with parameters:
-messageToId
-contactId
-=>
-* ContactId (if contactId)
-* Assign contact... (only internal users)
-
-  "HOTPLATE RELOADED"
-
-    MARCH
-
-    REDO JSONREST
-    [X] Finish documenting JsonRestStores
-    [X] Change JsonRestStores so that it has pluggable protocols, with HTTP implementation and Comet sketch
-    [X] Improve structure of documentation of JsonRestStores
-    [X] Improve deletion in SimpleDbLayer
-    [X] Make sure JsonRestStores passes all tests, data range tests are failing
-    [X] Make TingoDB work again with JsonRestStores
-    [X] Make everything work with the latest Express.JS
-    [X] Make Bookingdojo work straight out of a fresh install with npm install
-    [X] Make it work with Mongo 2.6 now that 3.0 is out and 2.4 is really quite outdated
-    [X] Thorough check of application, 100% of features, to work both locally and remotely including email/sms
-
-    REFACTORING
-    [X] Change `session` variable throughout Hotplate to request.session
-    [X] Take out onlineSearchSchema from WorkspacesUsers and UsersWorkspaces in hotCoreMultiHome.js
-    [X] JRS TODO: take AND out if Object.keys( self.onlineSearchSchema.structure ).length is only 1
-    [X] JRS TODO: Check what happens when sorting for a nested field with a 1:n relationship with table (?!)
-        http://stackoverflow.com/questions/29115466/what-does-sort-do-in-mongodb-when-sorting-by-a-sub-field-in-an-array 
-    [X] Change 'name' into 'type' in queries (double check that that's what it is in dstore)
-
-Angular, Backbone, Amber, Knockout, React, Mayhem
-    CLIENT-SIDE: AGGREGATE
-    [X] Make directories for other client-libraries (Angular, Knockout, Backbone, Ember, React, Mayhem)
-    [X] Move Dojo itself into a module called hotClientDojo: merge server-side and re-path the client side
-    [X] Reinstall GIT dependency sub-modules
-    [X] Install latest dstore, make everything work again with it applying local patches
-    [X] Work out paths properly
-    [X] Make sure all paths are resolved property with new layout
-    [X] Make registration work
-    [X] Re-work messagesManager, take API calls out)
-    [X] Make parameters for callbacks/app.set uniform, set route and host/port separately
-
-    OTHER FIXES AND QA
-    [X] Check basic QA, make sure everything works
-      [X] Reordering of email addresses/address/anything works visually but not on the DB
-      [X] Primary email, address, number won't change if dragging
-      [X] Dragging phone numbers doesn't work at all, not visually not programmatically
-      [X] Changing a phone number prefix won't change what's displayeds in the list after save
-      [X] Reordering of address fails (actually, moving things to last spot failed to reposition)
-      [X] Changing a plivio phone number (adding space) won't change the configArray variable in sms-plivio.js
-      [X] Messages are in erratic order
-      [X] When updating list record, the DISPLAYED record doesn't change (the value does, and re-edit value too)
-      [X] When an SMS comes back, SMS list doesn't get refreshed (but it IS matched!)
-      [X] Double-clicking on the first message, an odd empty record, bombs javascript
-      [X] Make the SMS list look a little better
-      [X] Test that email works 100%
-      [X] Fix re-authenticate screen if user logs out while app screen is up
-      [X] Fix bug which only show up wen a gazillion tab are present
-      [X] Tabs are not cleared up at all
-      [X] Fix broken messaging system
-
-    [X] Write initial "testing checklist", something that includes ALL cases including logout from different tab
-
-    CLIENT SIDE: TIDY UP AND FINALISE 
-    [X] Change the API for the store-aware widgets so that it only gets storeParameters once
-    [X] Improve API of ViewingWidget so that it can be call declaratively
-    [X] Always use auto-updating templates
-    * 
-    [X] Stop using global variables ANYWHERE in the program, each widget needs MINIMAL parameters
-    [X] Take "region" out of the name of positioning, look for 'top', too confusing
-    [X] Decide on string, GOOD naming convention for screens
-
-    * 
-    [X] Check the whole of the client-side code for quality, consistency
-    [X] Take out ANY useless require from every single file, only require actually used files
-    [X] Document each screen's input variables
-    
-    *
-    [X] Work on TODOs in BookingDojo (parameter normalisation for two stores)
-
-    *
-    [X] Pass a Store in Nested in JsonRestStores
-    [X] Make it so that layers are _global_ to the MAIN constructor
-    [X] Simplify definition of nested for stores with lookup, use idProperty of store
-    [X] Check if JsonRestStores can run SimpleDBLayer's init function after its own init
-    [X] Apply post-filtering to sub-children when fetching data (extrapolateDocs, prepareBeforeSend)
-    [X] Update JsonRestStores' documentation with new 'nested' syntax, now using stores!
-    [X] Make sure JsonRestStores' tests actually pass
-
-    *
-    [X] Complete cache-manipulation so that updating a store will also update children records
-    [X] Rename AppStoreNotify with StoreCacheUpdater.js
-    [X] Use put and delete, and query, rather than manipulating/searching memCache straight (added TODO)
-    [X] Find best way to emit signal to parent when a store is updated, sort out refresh of contact list
-    [X] Manually set the main email address as the first one in the list without server notification
-
-    *
-    [X] Fix problem where changing email address doesn't refresh the grid
-    [X] Check silent errors problem with application. 
-    [X] Check why email address in config screen doesn't update
-
-    *
-    [X] Check strange behaviour when saving (all child records lighten up, and why NOT addresses anyway?)
-    [X] Even stranger, cache seems to be zapped after refresh
-    [X] Make sure newStore CAN be listened to without fail, and maybe change it to topics
-    [X] Figure out why dragging below stops working, suspect suppressed syntax error
-    [X] Solve the "alsoNotify" dilemma in StoreCacheUpdater
-
-    *
-    [ ] Record deletion: Look for `initialFilter: { enabled: true },`, fix deletion!
-    [ ] Write Dojo mixin to make templating easier using published schema (it would be just. so. good.) 
-
-
     FINAL HOTPLATE STRETCH: DOCUMENTATION
     [ ] Re-prepare documentation for hotplate's server modules, check web site
     [ ] Have a look at http://samwize.com/2014/01/31/the-best-documentation-generator-for-node/
@@ -231,10 +82,37 @@ NOW, example application NEEDS to get finished so that I can release!
         [ ] Write picker for link to existing contact
         [ ] Use same picker, with search already activated, for the picker above
 
-
       [ ] For incoming, make it possible to change contactId for messageTo[0] (make log entry)
       
       [ ] Place widget to change messageTo[0] in the main inbox, it's always useful there (first 24h)
+
+FROM:
+=====
+Widget  with parameters:
+messageId (obj)
+contactId (obj)
+=>
+if contactId:
+  * contactId 
+if !contactId:
+  * Select...
+* Link email to another existing contact (contact picker)
+* Link email to a new contact (create contact, add email address, take person there)
+* Another contact with matching email address 1, != contactId
+* Another contact with matching email address 2, != contactId
+* Another contact with matching email address 3, != contactId
+
+When selection, save to messageId on one-field table with fromContactId.
+Check that change propagages properly to other tabs
+
+TO:
+===
+Widget with parameters:
+messageToId
+contactId
+=>
+* ContactId (if contactId)
+* Assign contact... (only internal users)
 
       *
       [ ] For putNew, make sure that 'protected' fields are copied over from existing record
@@ -328,6 +206,7 @@ HOTPLATE CAN BE RELEASED
 KICKSTARTER CAMPAIGN STARTS
 --------------------------------------------
 
+
 STEP 1: "BOOKINGS"
 
   * Make a "booking": an abstract entity that can be owned by a contact and that has a name
@@ -341,10 +220,10 @@ STEP 1: "BOOKINGS"
   DEADLINE: 30 Jul 2015
   ---------------------
 
+
 ---------------------------------------
 RELEASE BOOKINGDOJO AS IT IS, IN BETA
 ---------------------------------------
-
   
 STEP 2: "ADVANCED BOOKINGS"
 
@@ -356,7 +235,6 @@ STEP 2: "ADVANCED BOOKINGS"
   ---------------------
   DEADLINE: 30 Aug 2015
   ---------------------
-
 
 STEP 3: "BEAUTIFY AND FINAL TOUCHES"
 
@@ -373,13 +251,12 @@ STEP 4: "ACCOUNTING"
 
   * Accounting summaries for each booking (with system-calculated ones)
   * Interface with payment system allowing workspaces to get paid
-  * Ability to send invoices
+  * Ability to send invoices/quotes
   * Ability to _store_ received invoices
 
   ---------------------
   DEADLINE: 15 Oct Sept 2015
   ---------------------
-
 
 STEP 5: "ADVANCED MESSAGES AND TEMPLATES"
 
@@ -391,7 +268,6 @@ STEP 5: "ADVANCED MESSAGES AND TEMPLATES"
   DEADLINE: 30 Oct 2015
   ---------------------
 
-
 STEP 6: "CONTACTS -- INTEGRATION"
 
   * Add G+ authentication
@@ -402,7 +278,6 @@ STEP 6: "CONTACTS -- INTEGRATION"
   ---------------------
   DEADLINE: 30 Nov 2015
   ---------------------
-
 
 -------------------------------------------------------------
 DECEMBER 2015 IS WHEN THE BOOKING SYSTEM IS ACTUALLY FINISHED
@@ -1378,3 +1253,113 @@ X Send TEXT version of email as well, taken by taking out tags from interface
 X Figure out how to send SANE, CLIENT-SAFE html from the email contents
 X Validate `to` in workspacesMessages (comma separated list) 'abc123,def456,ghi789'.match(/\w+(?=,|$)/g);
 X Changed ownedByWorkspaceId into workspaceId
+
+  "HOTPLATE RELOADED"
+
+    MARCH
+
+    REDO JSONREST
+    [X] Finish documenting JsonRestStores
+    [X] Change JsonRestStores so that it has pluggable protocols, with HTTP implementation and Comet sketch
+    [X] Improve structure of documentation of JsonRestStores
+    [X] Improve deletion in SimpleDbLayer
+    [X] Make sure JsonRestStores passes all tests, data range tests are failing
+    [X] Make TingoDB work again with JsonRestStores
+    [X] Make everything work with the latest Express.JS
+    [X] Make Bookingdojo work straight out of a fresh install with npm install
+    [X] Make it work with Mongo 2.6 now that 3.0 is out and 2.4 is really quite outdated
+    [X] Thorough check of application, 100% of features, to work both locally and remotely including email/sms
+
+    REFACTORING
+    [X] Change `session` variable throughout Hotplate to request.session
+    [X] Take out onlineSearchSchema from WorkspacesUsers and UsersWorkspaces in hotCoreMultiHome.js
+    [X] JRS TODO: take AND out if Object.keys( self.onlineSearchSchema.structure ).length is only 1
+    [X] JRS TODO: Check what happens when sorting for a nested field with a 1:n relationship with table (?!)
+        http://stackoverflow.com/questions/29115466/what-does-sort-do-in-mongodb-when-sorting-by-a-sub-field-in-an-array 
+    [X] Change 'name' into 'type' in queries (double check that that's what it is in dstore)
+
+    CLIENT-SIDE: AGGREGATE
+    [X] Make directories for other client-libraries (Angular, Knockout, Backbone, Ember, React, Mayhem)
+    [X] Move Dojo itself into a module called hotClientDojo: merge server-side and re-path the client side
+    [X] Reinstall GIT dependency sub-modules
+    [X] Install latest dstore, make everything work again with it applying local patches
+    [X] Work out paths properly
+    [X] Make sure all paths are resolved property with new layout
+    [X] Make registration work
+    [X] Re-work messagesManager, take API calls out)
+    [X] Make parameters for callbacks/app.set uniform, set route and host/port separately
+
+    OTHER FIXES AND QA
+    [X] Check basic QA, make sure everything works
+      [X] Reordering of email addresses/address/anything works visually but not on the DB
+      [X] Primary email, address, number won't change if dragging
+      [X] Dragging phone numbers doesn't work at all, not visually not programmatically
+      [X] Changing a phone number prefix won't change what's displayeds in the list after save
+      [X] Reordering of address fails (actually, moving things to last spot failed to reposition)
+      [X] Changing a plivio phone number (adding space) won't change the configArray variable in sms-plivio.js
+      [X] Messages are in erratic order
+      [X] When updating list record, the DISPLAYED record doesn't change (the value does, and re-edit value too)
+      [X] When an SMS comes back, SMS list doesn't get refreshed (but it IS matched!)
+      [X] Double-clicking on the first message, an odd empty record, bombs javascript
+      [X] Make the SMS list look a little better
+      [X] Test that email works 100%
+      [X] Fix re-authenticate screen if user logs out while app screen is up
+      [X] Fix bug which only show up wen a gazillion tab are present
+      [X] Tabs are not cleared up at all
+      [X] Fix broken messaging system
+
+    [X] Write initial "testing checklist", something that includes ALL cases including logout from different tab
+
+    CLIENT SIDE: TIDY UP AND FINALISE 
+    [X] Change the API for the store-aware widgets so that it only gets storeParameters once
+    [X] Improve API of ViewingWidget so that it can be call declaratively
+    [X] Always use auto-updating templates
+    * 
+    [X] Stop using global variables ANYWHERE in the program, each widget needs MINIMAL parameters
+    [X] Take "region" out of the name of positioning, look for 'top', too confusing
+    [X] Decide on string, GOOD naming convention for screens
+
+    * 
+    [X] Check the whole of the client-side code for quality, consistency
+    [X] Take out ANY useless require from every single file, only require actually used files
+    [X] Document each screen's input variables
+    
+    *
+    [X] Work on TODOs in BookingDojo (parameter normalisation for two stores)
+
+    *
+    [X] Pass a Store in Nested in JsonRestStores
+    [X] Make it so that layers are _global_ to the MAIN constructor
+    [X] Simplify definition of nested for stores with lookup, use idProperty of store
+    [X] Check if JsonRestStores can run SimpleDBLayer's init function after its own init
+    [X] Apply post-filtering to sub-children when fetching data (extrapolateDocs, prepareBeforeSend)
+    [X] Update JsonRestStores' documentation with new 'nested' syntax, now using stores!
+    [X] Make sure JsonRestStores' tests actually pass
+
+    *
+    [X] Complete cache-manipulation so that updating a store will also update children records
+    [X] Rename AppStoreNotify with StoreCacheUpdater.js
+    [X] Use put and delete, and query, rather than manipulating/searching memCache straight (added TODO)
+    [X] Find best way to emit signal to parent when a store is updated, sort out refresh of contact list
+    [X] Manually set the main email address as the first one in the list without server notification
+
+    *
+    [X] Fix problem where changing email address doesn't refresh the grid
+    [X] Check silent errors problem with application. 
+    [X] Check why email address in config screen doesn't update
+
+    *
+    [X] Check strange behaviour when saving (all child records lighten up, and why NOT addresses anyway?)
+    [X] Even stranger, cache seems to be zapped after refresh
+    [X] Make sure newStore CAN be listened to without fail, and maybe change it to topics
+    [X] Figure out why dragging below stops working, suspect suppressed syntax error
+    [X] Solve the "alsoNotify" dilemma in StoreCacheUpdater
+    [X] Make the reload go away on parent record when saving a child record
+
+    *
+    [X] Record deletion: Look for `initialFilter: { enabled: true },`, fix deletion!
+    [X] Make ticket in dstore, with patck in Trackable.js, "MERC"
+
+    FINISHING HOTPLATE
+    [X] Write Dojo mixin to make templating easier using published schema (it would be just. so. good.) 
+    [X] Turn Bookingdojo itself into a normal embeddable widget, get globals from bdMain instead
