--- a/TODO.txt
+++ b/TODO.txt
@@ -1,11 +1,35 @@
 
-    FINAL HOTPLATE STRETCH: DOCUMENTATION
-    [ ] Re-prepare documentation for hotplate's server modules, check web site
-    [ ] Have a look at http://samwize.com/2014/01/31/the-best-documentation-generator-for-node/
-    [ ] Prepare blueprint documentation for client modules
-    [ ] Sketch documentation (only code snipsets, bullet points) for Dojo's blueprint widgets
-    [ ] Sketch documentation (only intro, structure) for Hotplate
-    [ ] Sketch documentation (meaningful summaries) for hotCoreAuth and hotCoreTransport
+
+DOCUMENT HOTPLATE
+-----------------
+
+    [ ] DOCUMENTATION INFRASTRUCTURE
+      [U] Fix path problem with current documentation
+      [X] Have a look at http://samwize.com/2014/01/31/the-best-documentation-generator-for-node/
+      [X] Figure out the "gist" of how YUIDOC works right now for client and server
+      [X] Install new YUIDOC
+      [X] Make new generic theme that uses same template by reusing changes to previous theme
+      [X] Find a way to have a README.md file per module, have most of the documentation there
+      [X] Re-do patch for YUIDOC to change name, maybe make PR to make it configurable
+      [ ] Write full Hotplate documentation
+        [ ] Finish documentation and rewrite of hotCoreAuth
+          [ ] Document defaults and configuration, including custom return page functions
+          [ ] Document recoverToken URL
+          [ ] Document pageElements and pageElementsPerPage events
+        [ ] Find neat way to write event data definitions and reference them
+        [ ] Find a way to document hotplate itself as the first module
+
+    [ ] DOCUMENTATION - API
+      [ ] Document Hotplate itself
+      [ ] Document all server modules except hotCoreTransport, hotCorePage
+      [ ] Document hotCoreTransport
+      [ ] Document hotCorePage
+      [ ] Document client blueprint
+      [ ] Document hotClientDojo
+
+    [ ] DOCUMENTATION - QUICKSTART GUIDES
+        [ ] Make 2 empty canvas example applications, non-multi homed and multi homed
+        [ ] Writing quickstart guide to get them started, explaining server
 
     [ ] Reach Nirvana with Dstore
       [C] Change dstore so that it can search in _children as well [Kris Zip's doing it]
@@ -14,11 +38,12 @@
       [ ] Client-side, make sure that when child table is updated, parent table looks for matching children and, if any, marks that one record as changed
 
   ----------------------
-  DEADLINE: 30 Apr 2015
+  DEADLINE: 26 May 2015
   ----------------------
 
 OMG Hotplate is finished?!?!?!?!?!?
-NOW, example application NEEDS to get finished so that I can release!
+
+RELEASE!
 
   "MESSAGES"
     
@@ -152,7 +177,7 @@ contactId
 
 
   ----------------------
-  DEADLINE: 30 May 2015
+  DEADLINE: 15 June 2015
   ----------------------
 
   "USERS AND INVITES"
@@ -171,7 +196,7 @@ contactId
 * Write a "log browser" for workspace owners and for God to see what happened, with filters
   
   ---------------------
-  DEADLINE: 10 June 2015
+  DEADLINE: 25 June 2015
   ---------------------
 
 "PERMISSIONS"
@@ -180,7 +205,7 @@ contactId
   * Make God application separate, with separate login (only God can login)
 
   ---------------------
-  DEADLINE: 20 June 2015
+  DEADLINE: 30 June 2015
   ---------------------
 
 "GET PAID!"
@@ -188,7 +213,7 @@ contactId
   * Add way to get paid and add credit (Paypal, or more likely Stripe, better API)
 
   ---------------------
-  DEADLINE: 30 June 2015
+  DEADLINE: 15 Aug 2015
   ---------------------
 
 "FINAL TOUCHES"
@@ -197,7 +222,7 @@ contactId
   * Make example application look better minimising the changes to the CSS
 
   ---------------------
-  DEADLINE: 10 Jul 2015
+  DEADLINE: 30 Aug 2015
   ---------------------
 
 --------------------------------------------
@@ -217,9 +242,8 @@ STEP 1: "BOOKINGS"
   * Make it look good (different to the "example application")
 
   ---------------------
-  DEADLINE: 30 Jul 2015
+  DEADLINE: 30 Sept 2015
   ---------------------
-
 
 ---------------------------------------
 RELEASE BOOKINGDOJO AS IT IS, IN BETA
@@ -233,7 +257,7 @@ STEP 2: "ADVANCED BOOKINGS"
   * Ability to match activities (with dates) for a contact in a booking, render them in the calendar
 
   ---------------------
-  DEADLINE: 30 Aug 2015
+  DEADLINE: 30 Oct 2015
   ---------------------
 
 STEP 3: "BEAUTIFY AND FINAL TOUCHES"
@@ -244,7 +268,7 @@ STEP 3: "BEAUTIFY AND FINAL TOUCHES"
   * Give web site to Alan to improve
 
   ---------------------
-  DEADLINE: 15 Sep 2015
+  DEADLINE: 30 Nov 2015
   ---------------------
 
 STEP 4: "ACCOUNTING"
@@ -255,7 +279,7 @@ STEP 4: "ACCOUNTING"
   * Ability to _store_ received invoices
 
   ---------------------
-  DEADLINE: 15 Oct Sept 2015
+  DEADLINE: 30 Dec 2015
   ---------------------
 
 STEP 5: "ADVANCED MESSAGES AND TEMPLATES"
@@ -265,7 +289,7 @@ STEP 5: "ADVANCED MESSAGES AND TEMPLATES"
   * Ability to set templates for messages of different types, with instant previews
   
   ---------------------
-  DEADLINE: 30 Oct 2015
+  DEADLINE: 30 Jan 2015
   ---------------------
 
 STEP 6: "CONTACTS -- INTEGRATION"
@@ -276,7 +300,7 @@ STEP 6: "CONTACTS -- INTEGRATION"
   * Add buttons to re-sync all contacts from specified modules
 
   ---------------------
-  DEADLINE: 30 Nov 2015
+  DEADLINE: 30 Feb 2015
   ---------------------
 
 -------------------------------------------------------------
@@ -1364,4 +1388,20 @@ X Changed ownedByWorkspaceId into workspaceId
     [X] Write Dojo mixin to make templating easier using published schema (it would be just. so. good.) 
     [X] Turn Bookingdojo itself into a normal embeddable widget, get globals from bdMain instead
     [X] Make DEAD sure storeEnhanced is run before ANYTHING else by placing it in bd.js
-    
+
+STATUS OF "FIXING hotCoreAuth":
+
+ [X] The list of workspaces doesn't show up in Pick, store is empty. Maybe it's taking info from cache?
+ [X] Go through authentication, checking database, check that automatic things (adding contact, adding user)
+  are actually happening
+ [X] See why adding a workspace doesn't add the entry in Pick. Not necessary, but curious
+ [X] Check data and returns when more than one workspace is there
+ [X] Check that things still gennerally work
+
+ [X] Make all URLs respect prefix and authentication still works
+ [X] Make all page-generating functions configurable
+ [X] Return the order number to the client (as well as the names) in the artificial store
+ [X] Fix problem where application is not even returned
+ [X] Test authentication one last time
+
+ 
