--- a/TODO.txt
+++ b/TODO.txt
@@ -13,30 +13,37 @@ DOCUMENT HOTPLATE
       [X] Re-do patch for YUIDOC to change name, maybe make PR to make it configurable
       [X] Get rid of appUrl and multiHomeURL, have only one appRoute used accordingly
 
-      SATURDAY 5/6
+      THURSDAY 18/6
        [ ] Prepare initial Hotplate documentation infrastructure
-        [ ] Finish documentation and rewrite of hotCoreAuth
-          [X] Document defaults and configuration, including custom return page functions
-          [ ] Document recoverToken URL
-          [ ] Document pageElements and pageElementsPerPage events
+         [X] Find neat way to write event data definitions and reference them
 
-       SUNDAY 6/6
-        [ ] Find neat way to write event data definitions and reference them
-        [ ] Find a way to document hotplate itself as the first module
+         [ ] Finish documentation and rewrite of hotCoreAuth
+           [X] Restructure the whole document splitting the USE and the WRITING A MODULE
+           [X] Document defaults and configuration, including custom return page functions
+           [X] Clean up and check hotCoreAuth in general, looking for mistakes and wrong output
+           [X] Document all stores created by hotCoreAuth properly
+           [X] Document recoverToken URL
+           [ ] Document how sub-modules can create extra URLs and extra stores
+           [x] Document extra stores and extra URLs created by submodules
+           [ ] Document pageElements and pageElementsPerPage events
+           [ ] Run a final check of hotCoreAuth, finalise it documenting missing parts
 
+       FRIDAY 19/6
+        [ ] Document hotplate itself properly.
 
     [ ] DOCUMENTATION - API
-      [ ] Document Hotplate itself
       [ ] Document all server modules except hotCoreTransport, hotCorePage, hotClientDojo
       [ ] Document hotCoreTransport
       [ ] Document hotCorePage
       [ ] Document hotClientDojo
       [ ] Document client blueprint
+      [ ] Document client-dojo
 
     [ ] DOCUMENTATION - QUICKSTART GUIDES
         [ ] Make 2 empty canvas example applications, non-multi homed and multi homed
+        [ ] Make another empty app for multi-page applications
         [ ] Check that the non-multi homed app works well with authentication
-        [ ] Writing quickstart guide to get them started, explaining server
+        [ ] Write quickstart guide to get them started, explaining server
 
     [ ] Reach Nirvana with Dstore
       [C] Change dstore so that it can search in _children as well [Kris Zip's doing it]
